Start data analysis

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -34,7 +34,8 @@
     "from wall_analysis import parse_experiments\n",
     "#exp_name = '2020_12_18_stepper'; appendix = \"\"; distance = 51\n",
     "#exp_name = '2020_12_18_flying'; appendix=\"_new\"; distance = 0\n",
-    "exp_name = '2021_03_01_flying';\n",
+    "#exp_name = '2021_03_01_flying';\n",
+    "exp_name = '2021_04_30_hover';\n",
     "fname = f'../experiments/{exp_name}/all_data.pkl'\n",
     "\n",
     "try:\n",
@@ -66,13 +67,12 @@
     "import seaborn as sns\n",
     "from plotting_tools import save_fig\n",
     "\n",
-    "min_time = 5\n",
-    "max_time = 30\n",
+    "min_time = 0\n",
+    "max_time = 7.5\n",
     "\n",
     "max_dist = 50 # cm\n",
     "for i, row in df_total.iterrows():\n",
-    "    \n",
-    "\n",
+    "    print('starting position:', row.positions[0, :])\n",
     "    positions_cm = row.positions[:, :3] * 100\n",
     "    \n",
     "    fig, axs = plt.subplots(1, 3) \n",
@@ -109,7 +109,7 @@
     "    axs[2].legend(loc='lower right')\n",
     "\n",
     "    plt.tight_layout()\n",
-    "    save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
+    "    #save_fig(fig, f'plots/{exp_name}{row.appendix}_movement.pdf')"
    ]
   },
   {
@@ -151,15 +151,16 @@
     "for i_col, row in df_total.iterrows():\n",
     "    all_frequencies = np.unique(row.frequencies_matrix)\n",
     "    spec = row.spectrogram[:, mic_idx, :]\n",
+    "    print(spec.shape, spec.dtype)\n",
     "    spec[spec == 0] = np.nan\n",
-    "    total = np.nanmean(spec, axis=1)\n",
+    "    total = np.nanmean(np.abs(spec), axis=1)\n",
     "    \n",
     "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    fig, ax = plt.subplots()\n",
     "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
     "    fig.set_size_inches(5, 5)\n",
     "    ax.pcolorfast(row.seconds, \n",
-    "                  all_frequencies, spec[:-1, :-1])\n",
+    "                  all_frequencies, np.abs(spec)[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
     "    ax.set_ylim(min_freq, max_freq)\n",
     "    ax.set_xlim(min_time, max_time)"
@@ -171,21 +172,75 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from dataset_parameters import kwargs_datasets\n",
+    "#spec_masked, freqs_masked = wall_detector.fill_from_row()\n",
+    "from wall_detector import WallDetector\n",
+    "row = df_total.iloc[0]\n",
+    "wall_detector = WallDetector(exp_name=exp_name)\n",
     "\n",
-    "def get_df_theory(frequencies, distances_grid, mic_idx):\n",
-    "    from simulation import get_freq_slice_theory\n",
-    "    df_matrix_theo = np.empty((len(frequencies), len(distances_grid)))\n",
-    "    for j, distance_cm in enumerate(distances_grid):\n",
-    "        slice_mics = get_freq_slice_theory(frequencies, distance_cm)\n",
-    "        df_matrix_theo[:, j] = slice_mics[:, mic_idx]\n",
-    "    return df_matrix_theo\n",
+    "print(row.stft.shape)\n",
+    "print(row.frequencies_matrix.shape)\n",
+    "\n",
+    "signals_f_all = row.stft\n",
+    "frequencies_all = row.frequencies_matrix\n",
+    "\n",
+    "fig, axs = plt.subplots(1, signals_f_all.shape[1])\n",
+    "fig.set_size_inches(15, 5)\n",
+    "for i in range(signals_f_all.shape[0]):\n",
+    "    signals_f = signals_f_all[i]\n",
+    "    frequencies = frequencies_all[i]\n",
+    "    \n",
+    "    for i_mic in range(signals_f.shape[0]):\n",
+    "        axs[i_mic].plot(frequencies, np.abs(signals_f[i_mic, :]),\n",
+    "                        label=f'mic{i_mic}')\n",
+    "        \n",
+    "    wall_detector.fill_from_signal(signals_f, frequencies)\n",
+    "wall_detector.to_numeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wall_detector.cleanup_conservative(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns\n",
+    "sns.set_palette('tab10')\n",
+    "sns.scatterplot(\n",
+    "    data=wall_detector.df, x='frequency', y='magnitude', hue='mic',\n",
+    "    linewidth=0.0\n",
+    ")\n",
+    "wall_detector.df.loc[(wall_detector.df.mic==i_mic)\n",
+    "                   & (wall_detector.df.distance==0)\n",
+    "                   & (wall_detector.df.angle==0)\n",
+    "                   & (wall_detector.df.frequency==3515)]\n",
+    "#n_freqs = wall_detector.remove_bad_freqs(verbose=True)\n",
+    "print(n_freqs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataset_parameters import kwargs_datasets\n",
+    "from simulation import get_df_theory\n",
+    "\n",
     "\n",
     "kwargs = kwargs_datasets[exp_name][\"audio_deck\"]\n",
     "distances_grid = np.arange(30, 80)\n",
     "frequencies = np.linspace(kwargs[\"min_freq\"], kwargs[\"max_freq\"], 30)\n",
     "\n",
-    "df_matrix_theo = get_df_theo(frequencies, distances_grid, mic_idx)"
+    "df_matrix_theo = get_df_theory(frequencies, distances_grid, mic_idx)"
    ]
   },
   {
