Add new stepper analysis

--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -39,13 +39,69 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_name = \"2021_02_23_wall\";  # old buzzer\n",
+    "exp_name = \"2021_04_30_stepper\";  # old buzzer\n",
+    "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
     "#exp_name = \"2021_02_25_wall\"\n",
     "# new buzzer\n",
     "\n",
     "mic_type = \"audio_deck\"\n",
-    "motors = \"all45000\"\n",
-    "#motors = 0"
+    "#motors = \"all45000\"\n",
+    "motors = 0\n",
+    "\n",
+    "source = \"sweep_new\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## spectrogram analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get first distance measurement from the chosen datatype. \n",
+    "all_data = pd.read_pickle(f'../experiments/{exp_name}/all_data.pkl')\n",
+    "row_idx = 1\n",
+    "data = all_data.loc[(all_data.mic_type==mic_type) & (all_data.motors==motors)].iloc[row_idx]\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from frequency_analysis import get_spectrogram_raw\n",
+    "print(data.seconds)\n",
+    "spec, freqs = get_spectrogram_raw(data.frequencies_matrix, data.stft)\n",
+    "spec = np.abs(spec)\n",
+    "print(spec.shape, freqs.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from plotting_tools import pcolorfast_custom\n",
+    "fig, ax = plt.subplots()\n",
+    "pcolorfast_custom(ax, data.seconds, freqs, spec[:, 0, :])\n",
+    "ax.set_xlabel('time')\n",
+    "ax.set_ylabel('frequency')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## raw df analysis"
    ]
   },
   {
@@ -61,6 +117,28 @@
     "    exp_name, mic_type, motors, appendix=\"_raw\"\n",
     ")\n",
     "wall_detector.remove_nan_rows(verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wall_detector.df\n",
+    "for distance, df_chosen in wall_detector.df.groupby('distance'):\n",
+    "    plt.figure()\n",
+    "    for i_mic, df_mic in df_chosen.groupby('mic'):\n",
+    "        i_mic = int(i_mic)\n",
+    "        df_mic = df_mic.sort_values(by='time')\n",
+    "        label=f'mic{i_mic}, N={len(df_mic)}'\n",
+    "        plt.scatter(df_mic.time, df_mic.frequency.values, color=f'C{int(i_mic)}', \n",
+    "                    label=label)\n",
+    "    plt.title(f'distance {distance}')\n",
+    "    plt.xlabel('time')\n",
+    "    plt.ylabel('peak frequency')\n",
+    "    plt.legend(loc='upper left')\n",
+    "    break"
    ]
   },
   {
@@ -98,8 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#wall_detector.remove_bad_measurements(verbose=True)\n",
-    "#plot_current_df()"
+    "wall_detector.remove_bad_measurements(verbose=True)\n",
+    "plot_current_df()"
    ]
   },
   {
@@ -108,8 +186,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#wall_detector.remove_bad_freqs(verbose=True)\n",
-    "#plot_current_df()"
+    "wall_detector.remove_bad_freqs(verbose=True)\n",
+    "plot_current_df()"
    ]
   },
   {
@@ -161,7 +239,7 @@
     "from wall_detector import prune_df_matrix\n",
     "\n",
     "matrix, dists, freqs = wall_detector.get_df_matrix()\n",
-    "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix, freqs)\n",
+    "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix, freqs, ratio_missing_allowed=0.5)\n",
     "\n",
     "fig, axs = plt.subplots(1, matrix.shape[0])\n",
     "fig.set_size_inches(5 * matrix.shape[0], 5)\n",
@@ -169,7 +247,9 @@
     "fig_pruned.set_size_inches(5 * matrix.shape[0], 5)\n",
     "for i, (ax, ax_pruned) in enumerate(zip(axs, axs_pruned)):\n",
     "    plot_df_matrix(dists, freqs, matrix[i], ax=ax)\n",
+    "    ax.set_ylabel('raw \\n frequency [Hz]')\n",
     "    plot_df_matrix(dists, freqs_pruned, matrix_pruned[i], ax=ax_pruned)\n",
+    "    ax_pruned.set_ylabel('pruned \\n frequency [Hz]')\n",
     "    ax.set_title(f\"mic{i}\")"
    ]
   },
@@ -184,9 +264,13 @@
     "sys.path.append(os.path.abspath('./../crazyflie-audio/python/'))\n",
     "from bin_selection import generate_sweep, get_frequencies\n",
     "\n",
-    "bins, *_ =  generate_sweep('sweep_short')\n",
+    "bins, *_ =  generate_sweep(source)\n",
     "freqs_buzzer = get_frequencies()[bins]\n",
-    "#print(np.diff(freqs_buzzer))\n",
+    "\n",
+    "if source == \"sweep_new\":\n",
+    "    freqs = [2999, 3113, 3236, 3370, 3514, 3632, 3757, 3891, 3986, 4137, 4245, 4358, 4477, 4603, 4737, 4878]\n",
+    "    print('error between played and frequency bin:', freqs_buzzer - freqs)\n",
+    "\n",
     "plt.figure()\n",
     "[plt.plot([f, f], [1, 2], color='C0') for f in freqs_buzzer]\n",
     "[plt.plot([f, f], [2, 3], color='C1') for f in freqs_pruned]\n",
@@ -199,11 +283,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "# Flying experiments"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
