--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -157,8 +157,8 @@
     "    \n",
     "    label = str(f\"{row.appendix}\").replace('_', '')\n",
     "    fig, ax = plt.subplots()\n",
+    "    fig.set_size_inches(10, 5)\n",
     "    ax.set_title(f'spectrogram of mic{mic_idx}, appendix {row.appendix}')\n",
-    "    fig.set_size_inches(5, 5)\n",
     "    ax.pcolorfast(row.seconds, \n",
     "                  all_frequencies, np.abs(spec)[:-1, :-1])\n",
     "    ax.set_ylabel('frequency [Hz]')\n",
@@ -218,12 +218,7 @@
     "    data=wall_detector.df, x='frequency', y='magnitude', hue='mic',\n",
     "    linewidth=0.0\n",
     ")\n",
-    "wall_detector.df.loc[(wall_detector.df.mic==i_mic)\n",
-    "                   & (wall_detector.df.distance==0)\n",
-    "                   & (wall_detector.df.angle==0)\n",
-    "                   & (wall_detector.df.frequency==3515)]\n",
-    "#n_freqs = wall_detector.remove_bad_freqs(verbose=True)\n",
-    "print(n_freqs)"
+    "#n_freqs = wall_detector.remove_bad_freqs(verbose=True)"
    ]
   },
   {
