--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -76,7 +76,8 @@
     "# exp_name = '2021_02_09_wall';\n",
     "\n",
     "#exp_name = \"2021_02_23_wall\";  # old buzzer\n",
-    "exp_name = \"2021_02_25_wall\"; # new buzzer\n",
+    "#exp_name = \"2021_02_25_wall\"; # new buzzer\n",
+    "exp_name = \"2021_04_30_stepper\"; # new hardware\n",
     "#exp_name = \"2021_03_01_flying\"\n",
     "# exp_name = '2020_12_9_rotating';\n",
     "# exp_name = '2020_11_26_wall';\n",
@@ -104,15 +105,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wall_detector.df"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -130,7 +122,7 @@
     "df_matrix_raw, df_dist, df_freq_raw = wall_detector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
     "    df_matrix_raw, df_freq_raw, verbose=True\n",
-    ")"
+    ")\n"
    ]
   },
   {
