--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# DF analysis"
+    "# 1. DF analysis"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. study distance slices"
+    "# 2. Distance slices"
    ]
   },
   {
@@ -226,13 +226,6 @@
     "    fname = f\"{exp_name}_{motors}\"\n",
     "    save_fig(fig_d, f'{plot_dir}/{fname}_distance_slice_{f:.0f}.pdf')\n",
     "    break"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# distance slice algorithm"
    ]
   },
   {
@@ -335,7 +328,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. study full matrices"
+    "# 3. Frequency slices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3.1 Calibration"
    ]
   },
   {
@@ -360,17 +360,7 @@
     "axs[1].set_title(\"calibration-global\")\n",
     "axs[1].set_ylabel('')\n",
     "axs[1].legend().set_visible(False)\n",
-    "save_fig(fig, f'{plot_dir}/{fname}_calibration_median.pdf')\n",
-    "\n",
-    "#fig, ax = plt.subplots()\n",
-    "#calib_function_fit = get_calibration_function_fit(exp_name, mic_type, ax=ax)\n",
-    "#ax.set_title(\"fit\")\n",
-    "#\n",
-    "#fig, ax = plt.subplots()\n",
-    "#calib_function_fit_one = get_calibration_function_fit(\n",
-    "#    exp_name, mic_type, ax=ax, fit_one_gain=True\n",
-    "#)\n",
-    "#ax.set_title(\"fit one\")"
+    "save_fig(fig, f'{plot_dir}/{fname}_calibration_median.pdf')"
    ]
   },
   {
@@ -499,7 +489,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Evaluate algorithm performance"
+    "## 3.2 Performance"
    ]
   },
   {
@@ -612,7 +602,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from plotting_tools import plot_performance\n",
@@ -750,7 +742,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calibration study"
+    "# 4. Calibration analysis"
    ]
   },
   {
