Rename and improve data collector

--- a/notebooks/Calibration.ipynb
+++ b/notebooks/Calibration.ipynb
@@ -58,11 +58,11 @@
    "outputs": [],
    "source": [
     "from pandas_utils import filter_by_dict\n",
-    "from wall_detector import WallDetector\n",
+    "from data_collector import DataCollector\n",
     "from frequency_analysis import plot_spectrogram\n",
     "import progressbar\n",
     "\n",
-    "from wall_detector import kwargs_standard\n",
+    "from data_collector import kwargs_standard\n",
     "params_dict = {\n",
     "    'sweep': kwargs_standard,\n",
     "    'sweep_buzzer': {\n",
@@ -87,12 +87,12 @@
     "    params = params_dict.get(source)\n",
     "    with progressbar.ProgressBar(max_value=max(df_source.index)) as p:\n",
     "        for j, row in df_source.iterrows():\n",
-    "            wall_detector = WallDetector(params=params, mic_type='audio_deck')\n",
+    "            data_collector = DataCollector(params=params, mic_type='audio_deck')\n",
     "\n",
-    "            spec_masked, freqs_masked = wall_detector.fill_from_row(row, verbose=False, mask=True)\n",
-    "            wall_detector.remove_spurious_freqs(n_spurious, verbose=False)\n",
+    "            spec_masked, freqs_masked = data_collector.fill_from_row(row, verbose=False, mask=True)\n",
+    "            data_collector.remove_spurious_freqs(n_spurious, verbose=False)\n",
     "\n",
-    "            psd, psd_std, freqs = wall_detector.get_frequency_slice_with_std()\n",
+    "            psd, psd_std, freqs = data_collector.get_frequency_slice_with_std()\n",
     "\n",
     "            fig, axs  = plt.subplots(1, 2)\n",
     "            fig.set_size_inches(10, 5)\n",
@@ -131,18 +131,18 @@
     "\n",
     "for source, df_source in df_chosen.groupby('source'):\n",
     "    params = params_dict.get(source)\n",
-    "    wall_detector = WallDetector(params=params, \n",
+    "    data_collector = DataCollector(params=params, \n",
     "                                 mic_type='audio_deck')\n",
     "    \n",
     "    with progressbar.ProgressBar(max_value=max(df_source.index)) as p:\n",
     "        for j, row in df_source.iterrows():\n",
     "            if row.appendix in chosen_experiments: \n",
-    "                spec_masked, freqs_masked = wall_detector.fill_from_row(row, verbose=False)\n",
+    "                spec_masked, freqs_masked = data_collector.fill_from_row(row, verbose=False)\n",
     "            p.update(j)\n",
     "            \n",
-    "    #wall_detector.remove_spurious_freqs(n_spurious, verbose=True)\n",
-    "    wall_detector.remove_spurious_freqs(n_spurious, verbose=True)\n",
-    "    psd, psd_std, freqs = wall_detector.get_frequency_slice_with_std(method=method)\n",
+    "    #data_collector.remove_spurious_freqs(n_spurious, verbose=True)\n",
+    "    data_collector.remove_spurious_freqs(n_spurious, verbose=True)\n",
+    "    psd, psd_std, freqs = data_collector.get_frequency_slice_with_std(method=method)\n",
     "    \n",
     "    df_calib.loc[len(df_calib), :] = {\n",
     "        'frequencies': freqs,\n",
