--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -95,11 +95,11 @@
    },
    "outputs": [],
    "source": [
-    "from wall_detector import WallDetector\n",
-    "from generate_df_results import wall_detector_from_df\n",
+    "from data_collector import DataCollector\n",
+    "from generate_df_results import data_collector_from_df\n",
     "\n",
-    "wall_detector = WallDetector()\n",
-    "backup_exists = wall_detector.fill_from_backup(exp_name, mic_type, motors)\n",
+    "data_collector = DataCollector()\n",
+    "backup_exists = data_collector.fill_from_backup(exp_name, mic_type, motors)\n",
     "if not backup_exists: \n",
     "    print('generate data using script generate_df_results.')"
    ]
@@ -117,9 +117,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_detector import prune_df_matrix\n",
+    "from data_collector import prune_df_matrix\n",
     "\n",
-    "df_matrix_raw, df_dist, df_freq_raw = wall_detector.get_df_matrix()\n",
+    "df_matrix_raw, df_dist, df_freq_raw = data_collector.get_df_matrix()\n",
     "df_matrix, df_freq, indices = prune_df_matrix(\n",
     "    df_matrix_raw, df_freq_raw, verbose=True\n",
     ")\n"
@@ -370,7 +370,7 @@
    "outputs": [],
    "source": [
     "from simulation import get_df_theory\n",
-    "from wall_detector import normalize_df_matrix\n",
+    "from data_collector import normalize_df_matrix\n",
     "\n",
     "min_value = np.inf\n",
     "max_value = -np.inf\n",
@@ -510,11 +510,20 @@
     "plt.plot(df_freq, freq_slice, label='matrix frequency slice')\n",
     "\n",
     "noisy_freq = df_freq + np.random.normal(scale=20, size=len(df_freq))\n",
-    "freq_slice_raw, used_freq, stds = wall_detector.get_frequency_slice_fixed(\n",
+    "freq_slice_raw, used_freq, stds = data_collector.get_frequency_slice_fixed(\n",
     "    noisy_freq, distance=distance, normalize_method=method, mics=[mic_idx], verbose=True\n",
     ")\n",
     "plt.plot(used_freq, freq_slice_raw[0], label='raw frequency slice')\n",
     "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(df_freq)"
    ]
   },
   {
@@ -554,7 +563,7 @@
     "                    slice_exp = slice_exp[:, 0]\n",
     "                    std = 1\n",
     "                else:\n",
-    "                    slice_exp, freqs, stds = wall_detector.get_frequency_slice_fixed(\n",
+    "                    slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
     "                        df_freq, distance, normalize_method=normalize_method, mics=[mic_idx])\n",
     "                    slice_exp = slice_exp[0]\n",
     "                    std = stds[0]\n",
@@ -676,7 +685,7 @@
     "                std = 1\n",
     "            else:\n",
     "                normalize_method = method_dict[method]\n",
-    "                slice_exp, freqs, stds = wall_detector.get_frequency_slice_fixed(\n",
+    "                slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
     "                    df_freq, distance, normalize_method=normalize_method, mics=[mic_idx])\n",
     "                slice_exp = slice_exp[0]\n",
     "                std = stds[0]\n",
@@ -756,7 +765,7 @@
     "\n",
     "fname = f'{exp_name}_{motors}'\n",
     "\n",
-    "all_distances = wall_detector.df.distance.unique()\n",
+    "all_distances = data_collector.df.distance.unique()\n",
     "\n",
     "fitting_results = pd.DataFrame(\n",
     "    columns=[\"frequency\", \"mic\", \"absorption\", \"gains\", \"offset\", \"method\", \"limit_distance\"]\n",
@@ -765,7 +774,7 @@
     "# found from below\n",
     "plot_tuples = [(0, 3093), (0, 4434), (0, 3605)]\n",
     "\n",
-    "for i, (frequency, df_freq) in enumerate(wall_detector.df.groupby('frequency')):\n",
+    "for i, (frequency, df_freq) in enumerate(data_collector.df.groupby('frequency')):\n",
     "    \n",
     "    # does not make a difference\n",
     "    # df_here = df_here[df_here.magnitude > 2]\n",
@@ -773,14 +782,14 @@
     "    if len(distances) < len(all_distances): # only plot distances with \"full coverage\"\n",
     "        continue\n",
     "    \n",
-    "    slices_median, distances_median_all, mics, stds = wall_detector.get_distance_slice(frequency)\n",
+    "    slices_median, distances_median_all, mics, stds = data_collector.get_distance_slice(frequency)\n",
     "    \n",
     "    # TODO: these don't make sense because they model the full oscillation\n",
     "    #print('stds:', stds)\n",
     "    \n",
     "    # global\n",
-    "    coeffs_raw_glob, *_ =  wall_detector.fit_to_raw(frequency)\n",
-    "    coeffs_median_glob, *_ =  wall_detector.fit_to_median(frequency)\n",
+    "    coeffs_raw_glob, *_ =  data_collector.fit_to_raw(frequency)\n",
+    "    coeffs_median_glob, *_ =  data_collector.fit_to_median(frequency)\n",
     "    \n",
     "    fitting_results.loc[len(fitting_results), :] = dict(\n",
     "        frequency=frequency,\n",
@@ -802,8 +811,8 @@
     "    for i_mic, (mic, df_here) in enumerate(df_freq.groupby('mic')):\n",
     "        mic_idx = int(mic)\n",
     "            \n",
-    "        coeffs_raw, distances_raw, fit_raw, cost_raw =  wall_detector.fit_to_raw(frequency, mic_idx)\n",
-    "        coeffs_median, fit_median, distances_median, cost_median = wall_detector.fit_to_median(frequency, mic_idx)\n",
+    "        coeffs_raw, distances_raw, fit_raw, cost_raw =  data_collector.fit_to_raw(frequency, mic_idx)\n",
+    "        coeffs_median, fit_median, distances_median, cost_median = data_collector.fit_to_median(frequency, mic_idx)\n",
     "        \n",
     "        # find the sigma for this frequency (per distance)\n",
     "        alpha, phase, gain = coeffs_raw\n",
