--- a/notebooks/WindowAnalysis.ipynb
+++ b/notebooks/WindowAnalysis.ipynb
@@ -56,7 +56,7 @@
     "from dataset_parameters import kwargs_datasets\n",
     "from pandas_utils import filter_by_dict\n",
     "\n",
-    "from wall_detector import WallDetector\n",
+    "from data_collector import DataCollector\n",
     "from frequency_analysis import get_index_matrix\n",
     "\n",
     "mag_thresh = 1.0 # tested for 25_* and 23_* dataset\n",
@@ -104,9 +104,9 @@
     "            label += f\"{row.appendix.replace('_', ' ')} \"\n",
     "        label += f\"mic{mic}\"\n",
     "\n",
-    "        wall_detector = WallDetector.init_from_row(exp_name, row)\n",
-    "        spec_all = np.abs(wall_detector.current_spectrogram)\n",
-    "        freqs = wall_detector.current_freqs\n",
+    "        data_collector = DataCollector.init_from_row(exp_name, row)\n",
+    "        spec_all = np.abs(data_collector.current_spectrogram)\n",
+    "        freqs = data_collector.current_freqs\n",
     "        \n",
     "        # plotting\n",
     "        index_matrix = get_index_matrix(spec_all)\n",
@@ -174,10 +174,10 @@
     "df_filtered = filter_by_dict(df_all, chosen_dict)\n",
     "assert len(df_filtered) == 1\n",
     "row = df_filtered.iloc[0]\n",
-    "wall_detector = WallDetector.init_from_row(exp_name, row)\n",
+    "data_collector = DataCollector.init_from_row(exp_name, row)\n",
     "\n",
-    "spec = wall_detector.current_spectrogram\n",
-    "freqs = wall_detector.current_freqs\n",
+    "spec = data_collector.current_spectrogram\n",
+    "freqs = data_collector.current_freqs\n",
     "\n",
     "n_extra = 12\n",
     "time_range = list(range(282, 291))\n",
@@ -269,15 +269,15 @@
     "            ax_slices[0, j].set_title(motors)\n",
     "\n",
     "        t0 = time.time()\n",
-    "        wall_detector = WallDetector.init_from_row(exp_name, row, interpolation='')\n",
+    "        data_collector = DataCollector.init_from_row(exp_name, row, interpolation='')\n",
     "        t1 = time.time()\n",
-    "        wall_detector_lagrange = WallDetector.init_from_row(exp_name, row, interpolation='lagrange')\n",
+    "        data_collector_lagrange = DataCollector.init_from_row(exp_name, row, interpolation='lagrange')\n",
     "        t2 = time.time()\n",
-    "        wall_detector_quadratic = WallDetector.init_from_row(exp_name, row, interpolation='quadratic')\n",
+    "        data_collector_quadratic = DataCollector.init_from_row(exp_name, row, interpolation='quadratic')\n",
     "        t3 = time.time()\n",
     "        print(f'times with interpolation:\\n none:{t1-t0:.2e}s \\n zero-pad:{t2-t1:.2e}s \\n quadratic:{t3-t2:.2e}')\n",
     "\n",
-    "        for idx, wd in enumerate([wall_detector, wall_detector_lagrange, wall_detector_quadratic]):\n",
+    "        for idx, wd in enumerate([data_collector, data_collector_lagrange, data_collector_quadratic]):\n",
     "            df_mic = wd.df[wd.df.mic == mic]\n",
     "            label = f\"interpolation {wd.interpolation}\"\n",
     "            stds = (\n",
