--- a/notebooks/CleanupAnalysis.ipynb
+++ b/notebooks/CleanupAnalysis.ipynb
@@ -110,13 +110,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from wall_detector import WallDetector\n",
+    "from data_collector import DataCollector\n",
     "\n",
-    "wall_detector = WallDetector(exp_name, mic_type)\n",
-    "backup_exists = wall_detector.fill_from_backup(\n",
+    "data_collector = DataCollector(exp_name, mic_type)\n",
+    "backup_exists = data_collector.fill_from_backup(\n",
     "    exp_name, mic_type, motors, appendix=\"_raw\"\n",
     ")\n",
-    "wall_detector.remove_nan_rows(verbose=True)"
+    "data_collector.remove_nan_rows(verbose=True)"
    ]
   },
   {
@@ -125,8 +125,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.df\n",
-    "for distance, df_chosen in wall_detector.df.groupby('distance'):\n",
+    "data_collector.df\n",
+    "for distance, df_chosen in data_collector.df.groupby('distance'):\n",
     "    plt.figure()\n",
     "    for i_mic, df_mic in df_chosen.groupby('mic'):\n",
     "        i_mic = int(i_mic)\n",
@@ -153,11 +153,11 @@
     "    fig, ax = plt.subplots()\n",
     "    fig.set_size_inches(10, 5)\n",
     "    sns.scatterplot(\n",
-    "        data=wall_detector.df, x=\"frequency\", y=\"magnitude\", hue=\"distance\", linewidth=0\n",
+    "        data=data_collector.df, x=\"frequency\", y=\"magnitude\", hue=\"distance\", linewidth=0\n",
     "    )\n",
     "    ax.set_yscale('log')\n",
-    "    min_y = max(wall_detector.df.magnitude.min(), 1e-2)\n",
-    "    max_y = min(wall_detector.df.magnitude.max(), 200)\n",
+    "    min_y = max(data_collector.df.magnitude.min(), 1e-2)\n",
+    "    max_y = min(data_collector.df.magnitude.max(), 200)\n",
     "    ax.set_ylim(min_y, max_y)"
    ]
   },
@@ -176,7 +176,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_bad_measurements(verbose=True)\n",
+    "data_collector.remove_bad_measurements(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -186,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_bad_freqs(verbose=True)\n",
+    "data_collector.remove_bad_freqs(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -196,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.merge_close_freqs(verbose=True)\n",
+    "data_collector.merge_close_freqs(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -206,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_outliers(verbose=True)\n",
+    "data_collector.remove_outliers(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -216,7 +216,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_spurious_freqs(verbose=True)\n",
+    "data_collector.remove_spurious_freqs(verbose=True)\n",
     "plot_current_df()"
    ]
   },
@@ -226,7 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "wall_detector.remove_nan_rows(verbose=True)"
+    "data_collector.remove_nan_rows(verbose=True)"
    ]
   },
   {
@@ -236,9 +236,9 @@
    "outputs": [],
    "source": [
     "from plotting_tools import plot_df_matrix\n",
-    "from wall_detector import prune_df_matrix\n",
+    "from data_collector import prune_df_matrix\n",
     "\n",
-    "matrix, dists, freqs = wall_detector.get_df_matrix()\n",
+    "matrix, dists, freqs = data_collector.get_df_matrix()\n",
     "matrix_pruned, freqs_pruned, *_ = prune_df_matrix(matrix, freqs, ratio_missing_allowed=0.5)\n",
     "\n",
     "fig, axs = plt.subplots(1, matrix.shape[0])\n",
