--- a/notebooks/WallAnalysis.ipynb
+++ b/notebooks/WallAnalysis.ipynb
@@ -128,7 +128,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "from plotting_tools import add_colorbar\n",
@@ -351,10 +353,10 @@
     "\n",
     "fig, axs = plt.subplots(1, 2, sharey=True)\n",
     "fig.set_size_inches(10, 5)\n",
-    "calib_function_median = get_calibration_function_median(exp_name, mic_type, ax=axs[0])\n",
+    "calib_function_median, freqs = get_calibration_function_median(exp_name, mic_type, ax=axs[0])\n",
     "axs[0].set_title(\"calibration-individual\")\n",
     "\n",
-    "calib_function_median_one = get_calibration_function_median(\n",
+    "calib_function_median_one, freqs = get_calibration_function_median(\n",
     "    exp_name, mic_type, ax=axs[1], fit_one_gain=True\n",
     ")\n",
     "axs[1].set_title(\"calibration-global\")\n",
@@ -498,40 +500,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "normalize_method = \"calibration-global\"\n",
-    "method = method_dict[normalize_method]\n",
-    "matrix = results.loc[results.normalization == normalize_method].iloc[0].matrix\n",
-    "\n",
-    "distance = 10\n",
-    "distance_idx = np.argmin(np.abs(distance - df_dist))\n",
-    "mic_idx = 1\n",
-    "freq_slice = matrix[mic_idx, :, distance_idx]\n",
-    "plt.figure()\n",
-    "plt.plot(df_freq, freq_slice, label='matrix frequency slice')\n",
-    "\n",
-    "noisy_freq = df_freq + np.random.normal(scale=20, size=len(df_freq))\n",
-    "freq_slice_raw, used_freq, stds = data_collector.get_frequency_slice_fixed(\n",
-    "    noisy_freq, distance=distance, normalize_method=method, mics=[mic_idx], verbose=True\n",
-    ")\n",
-    "plt.plot(used_freq, freq_slice_raw[0], label='raw frequency slice')\n",
-    "plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(df_freq)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from inference import get_probability_cost, get_probability_bayes\n",
     "from simulation import get_freq_slice_theory\n",
     "from estimators import DistanceEstimator, get_estimate\n",
@@ -564,7 +532,7 @@
     "                    std = 1\n",
     "                else:\n",
     "                    slice_exp, freqs, stds = data_collector.get_frequency_slice_fixed(\n",
-    "                        df_freq, distance, normalize_method=normalize_method, mics=[mic_idx])\n",
+    "                        df_freq, distance, mics=[mic_idx])\n",
     "                    slice_exp = slice_exp[0]\n",
     "                    std = stds[0]\n",
     "                #slice_exp = fill_nans(slice_exp, freqs)\n",
@@ -596,16 +564,16 @@
     "                        'algorithm': algo\n",
     "                    }\n",
     "                    \n",
-    "        for method, distance_estimator in distance_estimators.items():\n",
-    "            distances_here, proba = distance_estimator.get_distance_distribution()\n",
-    "            d = get_estimate(distances_here, proba) * 1e2\n",
-    "            err_df.loc[len(err_df), :] = {\n",
-    "                'error': d - distance,\n",
-    "                'mic': 'all',\n",
-    "                'distance': distance,\n",
-    "                'method': method, \n",
-    "                'algorithm': 'bayes-combination' \n",
-    "            }"
+    "        #for method, distance_estimator in distance_estimators.items():\n",
+    "        #    distances_here, proba = distance_estimator.get_distance_distribution()\n",
+    "        #    d = get_estimate(distances_here, proba) * 1e2\n",
+    "        #    err_df.loc[len(err_df), :] = {\n",
+    "        #        'error': d - distance,\n",
+    "        #        'mic': 'all',\n",
+    "        #        'distance': distance,\n",
+    "        #        'method': method, \n",
+    "        #        'algorithm': 'bayes-combination' \n",
+    "        #    }"
    ]
   },
   {
