Prepare new experiments

--- a/notebooks/FlyingAnalysis.ipynb
+++ b/notebooks/FlyingAnalysis.ipynb
@@ -186,13 +186,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# spec_masked, freqs_masked = data_collector.fill_from_row()\n",
     "from data_collector import DataCollector\n",
     "from inference import get_probability_bayes\n",
+    "from simulation import get_freq_slice_theory\n",
     "\n",
+    "nominal_distance = 42\n",
     "data_collector = DataCollector(exp_name=exp_name)\n",
     "\n",
     "signals_f_all = row.stft\n",
@@ -204,8 +208,6 @@
     "\n",
     "freqs_calib = np.linspace(np.min(frequencies_all), np.max(frequencies_all), 30)\n",
     "f_calib_all = calib_function(freqs_calib)\n",
-    "for i_mic in range(f_calib.shape[0]):\n",
-    "    axs[0, i_mic].plot(freqs_calib, f_calib_all[i_mic], label=f\"calib\", ls=\":\")\n",
     "\n",
     "for i in range(signals_f_all.shape[0]):\n",
     "    signals_f = signals_f_all[i]\n",
@@ -278,7 +280,8 @@
     "        ax.plot(distance_corr, label=label)\n",
     "        ax.axhline(nominal_distance)\n",
     "        \n",
-    "        break\n",
+    "        for i_mic in range(f_calib_all.shape[0]):\n",
+    "            axs[0, i_mic].plot(freqs_calib, f_calib_all[i_mic], label=f\"calib\", ls=\":\")\n",
     "\n",
     "ax.set_xlabel(\"time idx\")\n",
     "ax.set_ylabel(\"rel. movement [cm]\")\n",
@@ -312,7 +315,6 @@
     "from inference import get_probability_cost, get_probability_fft\n",
     "from frequency_analysis import get_index_matrix\n",
     "from plotting_tools import add_colorbar\n",
-    "from simulation import get_freq_slice_theory\n",
     "\n",
     "if 'newbuzzer' in row.appendix: \n",
     "    calib_function = calib_function_new\n",
